feat: switch to jakarta apis